# Pori

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lcov.info  pori.example.yml  pori.protocol.example.yml  protocol.example.yml
.github/instructions/: Files.instructions.md
.github/workflows/: auto-release.yml  ci-release.yml  ci.yml  manual-release.yml  release.yml
docs/: api.md  architecture.md  cli.md  dashboard.md  install.md  overview.md  protocol.md  proxy.md  server.md  setup.md  stack.md  websocket.md
release/: README.md  build.sh  install.ps1  install.sh  prepare.sh
src/: lib.rs  main.rs
src/config/: cli.rs  settings.rs
src/logging/: mod.rs
src/protocol/: config.rs  http.rs  messages.rs  mod.rs  tunnel.rs  websocket.rs
src/proxy/: client.rs  forwarder.rs  messages.rs  mod.rs
src/server/: api.rs  dashboard.rs  mod.rs  static_files.rs
src/utils/: error.rs  mod.rs  signals.rs
src/utils/http/: mod.rs  status.rs
src/websocket/: client.rs  messages.rs  mod.rs  reconnect.rs  tunnel.rs
static/: index.html
static/css/: main.css
static/js/: main.js
