[package]
name = "tunnel-client"
version = "0.1.0"
edition = "2021"
authors = ["femar <femar@example.com>"]
description = "High-performance tunnel client with dashboard"
license = "MIT"

[[bin]]
name = "tunnel-client"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.45.1", features = ["full"] }

# HTTP server
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = "0.1.14"
http-body-util = "0.1.3"

# WebSocket client
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }

# HTTP client for local server communication
reqwest = { version = "0.12.20", features = ["json", "stream"] }

# CLI and configuration
clap = { version = "4.5.40", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Utilities
uuid = { version = "1.17.0", features = ["v4"] }
url = "2.5.4"
mime = "0.3.17"
mime_guess = "2.0.5"
bytes = "1.10.1"
futures-util = "0.3.31"

# Static file embedding
include_dir = "0.7.4"

# Terminal detection for logging
atty = "0.2.14"

[dev-dependencies]
tokio-test = "0.4.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["tls"]
tls = ["tokio-tungstenite/native-tls"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots"]
